--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "My Recipe Website",
+  "name": "assignment-3-3-yaara-tomer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
